Bug 1788901 - handle missing folder properties better. r=benc

Restore code from bug 1726319 and bug 1776280 removed in bug 1778888:

https://hg.mozilla.org/comm-central/rev/aba71e533211
https://hg.mozilla.org/comm-central/rev/a96377dc5770
https://hg.mozilla.org/comm-central/rev/2f49d0b8575f

See reasoning in code comments.